syntax = "proto3";

package time;

option java_package = "distsys.recruitmentday.time";
option java_outer_classname = "Time";

service WaitService {
  rpc StreamWaitTime(WaitTimeRequest) returns (stream WaitTimeUpdate);
}

message WaitTimeRequest {
  string device_id = 1;
}

message WaitTimeUpdate {
  string time_remaining = 1;
}